@@ -26,6 +26,9 @@ require_once MODX_CORE_PATH.'model/modx/processors/resource/update.class.php';
  * @package articles
  */
 class Article extends modResource {
+    public $allowListingInClassKeyDropdown = false;
+    public $showInContextMenu = false;
+
     function __construct(xPDO &$xpdo) {
         parent :: __construct($xpdo);
         $this->set('class_key','Article');
